// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Info Block matches the snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-right: 35px;
}

.c1 a {
  color: white;
  text-decoration: none;
}

.c3 {
  position: relative;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
}

.c2 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

<div>
  <div
    className="c0"
  >
    <span
      className="c1"
    >
      The Future of Art
    </span>
    <span
      className="c2"
    >
      02:28
    </span>
  </div>
  <div
    className="c0"
  >
    <span
      className="c3"
    >
      Trevor Paglan
    </span>
  </div>
</div>
`;

exports[`Video Info Block matches the snapshot with edit props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-right: 35px;
}

.c1 a {
  color: white;
  text-decoration: none;
}

.c3 {
  position: relative;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
}

.c2 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

<div>
  <div
    className="c0"
  >
    <span
      className="c1"
    >
      The Future of Art
    </span>
    <span
      className="c2"
    >
      02:28
    </span>
  </div>
  <div
    className="c0"
  >
    <span
      className="c3"
    >
      <div>
        Child 
        title
      </div>
    </span>
  </div>
</div>
`;
